# sdfglib-einsum

./: CMakeLists.txt  README.md
.github/workflows/: unit_tests.yml
include/sdfg/einsum/: einsum_dispatcher.h  einsum_node.h  einsum_serializer.h
src/einsum/: einsum_dispatcher.cpp  einsum_node.cpp  einsum_serializer.cpp
tests/: CMakeLists.txt  test.cpp
tests/einsum/: einsum_dispatcher_test.cpp  einsum_node_test.cpp
tests/fixtures/: einsum.h
